# handsome

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  build.sh  compile_commands.json  statistic.txt
.cache/clangd/index/: __stdarg_va_list.h.6BAE031430C2529D.idx  __wmmintrin_aes.h.15D161B5F92D2002.idx  _bsd_types.h.285F9C76D870E649.idx  _fd_types.h.89DF4E00372A536B.idx  _ip_mreq1.h.18B78C4441A51746.idx  _ip_types.h.97538EEBAA0C57CB.idx  _mingw.h.131E16FB2F6A028B.idx  _mingw_ddk.h.C3858221417E4543.idx  _mingw_mac.h.2E27C890E9E66704.idx  _mingw_off_t.h.5E2E1FE0D89FB6AB.idx  _mingw_secapi.h.7A6570515055E8D6.idx  _mingw_stat64.h.2A7EAFE1ABE67843.idx  _mingw_unicode.h.1917A337793C5C28.idx  _socket_types.h.8560C59ED8B58837.idx  _timeval.h.8D2DE1CA80321902.idx  _ws1_undef.h.0ACB62CB74263CF6.idx  _wsa_errnos.h.F2C31DD699CC15C5.idx  _wsadata.h.A78DE5085284C4AF.idx  aligned_buffer.h.BA926FADB23ADC7A.idx  allContentTypeHeader.cpp.2A42C035DAD40B4C.idx  allContentTypeHeader.cpp.936B7F3929117382.idx  allContentTypeHeader.hpp.21D713C016459186.idx  allContentTypeHeader.hpp.ABFD472EC18F4CA9.idx  alloc_traits.h.2FCC2019C5554B87.idx  alloc_traits.h.3A49A2D3E59BC632.idx  allocated_ptr.h.F8F7FC468885E0A6.idx  allocator.h.DC84B79D16DD841E.idx  ammintrin.h.6B7BF434708E36E0.idx  amxcomplexintrin.h.0F4A107224C998A6.idx  amxintrin.h.654D1AC21A0EBC7B.idx  apiset.h.EE42D296B2C4C448.idx  apisetcconv.h.60191DA6058AFB08.idx  array.1EC398DF4E2B6CFB.idx  assertions.h.14012CDEB5CE5A3A.idx  atomic_word.h.51E5DC0F4ADDC909.idx  atomicity.h.04A864FA74A3019D.idx  avx2intrin.h.71C79F772A3BB51B.idx  avx512bf16intrin.h.91DD51F79606D9DB.idx  avx512bitalgintrin.h.2F838668C435304D.idx  avx512bwintrin.h.E37BE327BF562A8E.idx  (+415 more)
include/handSome/: handSome.hpp
include/httpServer/: allContentTypeHeader.hpp  header.hpp  headers.hpp  httpServer.hpp  ioManagment.hpp  requestHeader.hpp  responseHeader.hpp  route.hpp  utils.hpp
include/multithreading/: ThreadPool.hpp
src/: allContentTypeHeader.cpp  handSome.cpp  httpServer.cpp  main.cpp
src/handSomeCpp/: handSome.cpp
src/headers/: handSome.hpp  httpServer.hpp  route.hpp
src/httpServerCpp/: allContentTypeHeader.cpp  header.cpp  headers.cpp  httpServer.cpp  requestHeader.cpp  responseHeader.cpp
src/multithreading/: threadPool.cpp
src/templates/: asset-manifest.json  index.html  node.json
src/website/: login.html
(+11 files in other folders)
